[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/textures/settings.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/flappyfont.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://enviroment/Settings.gd" type="Script" id=3]
[ext_resource path="res://assets/textures/slider_tick.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/slider_tick_selected.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/assets.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 6 )
region_rect = Rect2( 312, 524, 53, 32 )

[sub_resource type="AtlasTexture" id=7]

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 6 )
normal_map = SubResource( 7 )
region_rect = Rect2( 390, 524, 53, 32 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 6 )
region_rect = Rect2( 312, 524, 53, 32 )

[sub_resource type="DynamicFont" id=2]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 18
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("settings_panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -477, 104 ), Vector2( 13, 104 ), Vector2( 0, 104 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("settings_panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 104 ), Vector2( 14, 104 ), Vector2( -477, 104 ) ]
}

[node name="settings" type="Node2D"]
script = ExtResource( 3 )

[node name="settings_panel" type="Sprite" parent="."]
position = Vector2( -480, 104 )
texture = ExtResource( 1 )
offset = Vector2( 240, 323 )

[node name="Label" type="Label" parent="settings_panel"]
margin_left = 160.0
margin_top = -9.0
margin_right = 332.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameModeToggle" type="CheckButton" parent="settings_panel/Label"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.0
margin_top = 43.5
margin_right = 30.0
margin_bottom = 75.5
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="settings_panel/Label/GameModeToggle"]
anchor_left = -1.297
anchor_top = 0.5
anchor_right = 2.406
anchor_bottom = 0.781
margin_left = 0.00800323
margin_top = -7.0
margin_right = 0.0159912
margin_bottom = 3.008
custom_fonts/font = SubResource( 2 )
text = "Classic              Reverse"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speed_slider" type="HSlider" parent="settings_panel"]
anchor_left = 0.277
anchor_top = 0.281
anchor_right = 0.777
anchor_bottom = 0.347
margin_left = 0.0399933
margin_top = -103.974
margin_right = 0.0400085
margin_bottom = -104.338
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 4 )
min_value = 150.0
max_value = 500.0
step = 10.0
value = 200.0
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speed_tite" type="Label" parent="settings_panel/speed_slider"]
anchor_left = 0.383
anchor_top = 0.714
anchor_right = 0.55
anchor_bottom = 0.964
margin_left = -27.92
margin_top = -47.984
margin_right = 25.0
margin_bottom = -42.984
custom_fonts/font = SubResource( 3 )
text = "Pipe Speed"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speed_label" type="Label" parent="settings_panel/speed_slider"]
anchor_left = 0.383
anchor_top = 0.714
anchor_right = 0.55
anchor_bottom = 0.964
margin_left = 0.0799942
margin_top = 0.0159988
margin_bottom = 0.0159988
custom_fonts/font = SubResource( 4 )
text = "200"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/menu_toggle = SubResource( 5 )
anims/menu_toggle_off = SubResource( 6 )

[connection signal="toggled" from="settings_panel/Label/GameModeToggle" to="." method="_on_GameModeToggle_toggled"]
[connection signal="value_changed" from="settings_panel/speed_slider" to="." method="_on_speed_slider_value_changed"]
